cilium-cli/connectivity/manifests/client-egress-l7-http-method.yaml
---
# client2 is allowed to contact the echo Pod
# on port 8080 via POST method. HTTP introspection is enabled for client2.
# The toFQDNs section relies on DNS introspection being performed by
# the client-egress-only-dns policy.
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  namespace: cilium-test
  name: client-egress-l7-http-method
spec:
  description: "Allow POST <echo>:8080/(public|private) from client2"
  endpointSelector:
    matchLabels:
      other: client
  egress:
  # Allow POST /public requests towards echo pods.
  - toEndpoints:
    - matchLabels:
        kind: echo
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
      rules:
        http:
        - method: "POST"
          path: "/public$"
        - method: "POST"
          path: "/private$"
